unified_tests/pattern_matching/match_arm_missing_expression_before_right_brace/expect/build.text.stderr
lib.copp:5:5: error: expected expression
      }
      ^
lib.copp:8:1: error: expected symbol
  
